# paddock

./: .gitignore  .instructions.md  .pylintrc  README.md  pyproject.toml
apps/recorder/: main.py  pyproject.toml
apps/viewer/: main.py  pyproject.toml
docs/: notes.txt
libs/telemetry/: .instructions.md  pyproject.toml
libs/telemetry/src/telemetry/: filters.py  loader.py  parsers.py
libs/telemetry/src/telemetry/packet/: __init__.py  base.py  car_damage.py  car_setup.py  car_status.py  car_telemetry.py  constants.py  event.py  final_classification.py  header.py  lap.py  lap_positions.py  lobby.py  motion.py  motion_ex.py  participants.py  session.py  session_history.py  time_trial.py  tyre_sets.py
libs/telemetry/tests/telemetry/packet/: helpers.py  test_car_damage.py  test_car_setup.py  test_car_status.py  test_car_telemetry.py  test_event.py  test_final_classification.py  test_header.py  test_lap.py  test_lap_positions.py  test_lobby.py  test_motion.py  test_motion_ex.py  test_participants.py  test_session.py  test_session_history.py  test_time_trial.py  test_tyre_sets.py
recorder/: config.yaml  main.py  pyproject.toml
src/: constants.py  main.py  packet.py  server.py
src/packet/: constants.py  event.py  header.py  information.py  lapdata.py  motion.py  parser.py  participant.py  session.py
tests/packet/: test_header.py  test_session.py
viewer/: constants.py  packets.py  parser.py  pyproject.toml
