[project]
name = "paddock"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "recorder",
    "viewer",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.50",
]

[tool.uv.workspace]
members = [
    "apps/recorder",
    "apps/viewer",
    "libs/telemetry",
]

[tool.uv.sources]
recorder = { workspace = true }
viewer = { workspace = true }
