[project]
name = "recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "telemetry",
    "typer>=0.26.7",
]

[project.scripts]
recorder = "main:main"

[tool.uv.sources]
telemetry = { workspace = true }
